docs/v1.12.0/ar/concepts/testing.mdx
---
title: الاختبار
description: تعرّف على كيفية اختبار طاقم CrewAI وتقييم أدائه.
icon: vial
mode: "wide"
---

## نظرة عامة

يُعد الاختبار جزءًا حيويًا من عملية التطوير، ومن الضروري التأكد من أن طاقمك يعمل كما هو متوقع. مع CrewAI، يمكنك اختبار طاقمك وتقييم أدائه بسهولة باستخدام إمكانيات الاختبار المدمجة.

### استخدام ميزة الاختبار

أضفنا أمر CLI `crewai test` لتسهيل اختبار طاقمك. سيقوم هذا الأمر بتشغيل طاقمك لعدد محدد من التكرارات وتوفير مقاييس أداء مفصلة. المعاملات هي `n_iterations` و `model`، وهي اختيارية وتكون قيمها الافتراضية 2 و `gpt-4o-mini` على التوالي. حاليًا، المزود الوحيد المتاح هو OpenAI.

```bash
crewai test
```

إذا أردت تشغيل المزيد من التكرارات أو استخدام نموذج مختلف، يمكنك تحديد المعاملات هكذا:

```bash
crewai test --n_iterations 5 --model gpt-4o
```

أو باستخدام الصيغة المختصرة:

```bash
crewai test -n 5 -m gpt-4o
```

عند تشغيل أمر `crewai test`، سيتم تنفيذ الطاقم للعدد المحدد من التكرارات، وستُعرض مقاييس الأداء في نهاية التشغيل.

سيظهر جدول الدرجات في النهاية لعرض أداء الطاقم من حيث المقاييس التالية:

<center>**درجات المهام (1-10 الأعلى أفضل)**</center>

| المهام/الطاقم/الوكلاء  | التشغيل 1 | التشغيل 2 | المجموع المتوسط | الوكلاء                         | معلومات إضافية                  |
|:------------------|:-----:|:-----:|:----------:|:------------------------------:|:---------------------------------|
| المهمة 1        |  9.0  |  9.5  |    **9.2**     | Professional Insights          |                                  |
|                    |       |       |            | Researcher                     |                                  |
| المهمة 2        |  9.0  | 10.0  |    **9.5**     | Company Profile Investigator   |                                  |
| المهمة 3        |  9.0  |  9.0  |    **9.0**     | Automation Insights            |                                  |
|                    |       |       |            | Specialist                     |                                  |
| المهمة 4        |  9.0  |  9.0  |    **9.0**     | Final Report Compiler          | Automation Insights Specialist   |
| الطاقم         | 9.00  | 9.38  |    **9.2**     |                                |                                  |
| زمن التنفيذ (ثانية) |  126  |  145  |    **135**     |                                |                                  |

يوضح المثال أعلاه نتائج الاختبار لتشغيلين للطاقم مع مهمتين، مع الدرجة الإجمالية المتوسطة لكل مهمة والطاقم ككل.
